# Rust_Dioxus_Ecom

./: .gitignore  README.md
admin-frontend/: Cargo.toml  Dioxus.toml  index.html
admin-frontend/src/: api.rs  main.rs  state.rs
admin-frontend/src/components/: header.rs  mod.rs  modal.rs  sidebar.rs  stats_card.rs  table.rs
admin-frontend/src/pages/: banners.rs  brands.rs  categories.rs  dashboard.rs  delivery_boys.rs  delivery_zones.rs  faqs.rs  featured_sections.rs  login.rs  mod.rs  notifications.rs  orders.rs  pending_products.rs  placeholders.rs  products.rs  promos.rs  refunds.rs  reviews.rs  roles.rs  seller_withdrawals.rs  sellers.rs  settings.rs  stores.rs  support_tickets.rs  system_updates.rs  system_users.rs  tax_rates.rs  users.rs
backend/: Cargo.toml  convert_countries.py  setup_countries.sql  setup_db.sql  setup_dummy_data.py  setup_dummy_data.sql  setup_dummy_orders.py  setup_dummy_orders.sql  setup_orders.sql
backend/public/: storage
backend/src/: main.rs  schema.rs
backend/src/config/: database.rs
backend/src/controllers/: auth.rs  banners.rs  brands.rs  categories.rs  commissions.rs  dashboard.rs  delivery_boys.rs  delivery_zones.rs  faqs.rs  featured_sections.rs  mod.rs  notifications.rs  orders.rs  permissions.rs  products.rs  profile.rs  promos.rs  refunds.rs  reviews.rs  roles.rs  sellers.rs  settings.rs  stores.rs  support_tickets.rs  system_updates.rs  system_users.rs  tax_classes.rs  tax_rates.rs  withdrawals.rs
backend/src/middlewares/: auth.rs
backend/src/models/: banner.rs  brand.rs  category.rs  delivery_boy.rs  delivery_zone.rs  mod.rs  order.rs  product.rs  promo.rs  seller.rs  settings.rs  store.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  client.rs  mod.rs
backend/src/services/: auth.rs
backend/src/utils/: api_response.rs  jwt.rs  mod.rs  password.rs  types.rs
backend/src/validators/: mod.rs
hyperlocal-dioxus-customer/: CONVERSION_SUMMARY.md  Cargo.toml  DESIGN_PREVIEW.html  Dioxus.toml  LAZA_UI_IMPLEMENTATION.md  README.md  STRUCTURE.md
hyperlocal-dioxus-customer/src/: app.rs  main.rs
hyperlocal-dioxus-customer/src/api/: addresses.rs  auth.rs  cart.rs  client.rs  mod.rs  orders.rs  products.rs  wallet.rs
hyperlocal-dioxus-customer/src/components/: mod.rs
hyperlocal-dioxus-customer/src/config/: app_config.rs  mod.rs  theme.rs
hyperlocal-dioxus-customer/src/constants/: api_routes.rs  app_constants.rs  mod.rs
hyperlocal-dioxus-customer/src/context/: auth_context.rs  cart_context.rs  mod.rs  theme_context.rs
hyperlocal-dioxus-customer/src/hooks/: mod.rs
hyperlocal-dioxus-customer/src/pages/: account.rs  address_list.rs  cart.rs  categories.rs  home.rs  intro_slider.rs  login.rs  mod.rs  my_orders.rs  near_by_store_details.rs  near_by_stores.rs  order_detail.rs  otp_verification.rs  payment_options.rs  product_detail.rs  product_listing.rs  register.rs  search.rs  splash.rs  user_profile.rs  wallet.rs  wishlist.rs
hyperlocal-dioxus-customer/src/services/: mod.rs  storage.rs
(+965 files in other folders)
