[package]
name = "hyperlocal-admin-frontend"
version = "1.0.0"
edition = "2021"
description = "HyperLocal Admin Frontend - Dioxus"

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-router = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.5"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }
rust_decimal = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
futures = "0.3"

[profile.release]
lto = true
opt-level = "z"
