[package]
name = "hyperlocal-dioxus"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-web = "0.7"
dioxus-router = "0.7"
dioxus-free-icons = { version = "0.10.0", features = ["hero-icons-outline", "hero-icons-solid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo-storage = "0.3"
gloo-timers = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
